Complete bonus speed round

--- a/mole.html
+++ b/mole.html
@@ -7,6 +7,11 @@
 </head>
 
 <body>
+  <div class="gh">
+    <div class="score"></div>
+    <div class="game-complete"></div>
+    <div class="moles-left"></div>
+  </div>
   <div class="pf">
     <div class="wgs">
       <img class="wgs__mole-head wgs__mole-head--hidden" src="/mole-head.png">
